@@ -370,5 +370,10 @@
     	<artifactId>util</artifactId>
     	<version>4.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+		<groupId>com.google.guava</groupId>
+		<artifactId>guava</artifactId>
+	<version>14.0.1</version>
+</dependency>
   </dependencies>
 </project>
