@@ -1,6 +1,12 @@
 Flukes Release Notes:
 ---------------------
 
+04/02/13:
+- Added experimental support for automatic IP address assignment
+
+03/18/13:
+- Shortened names of links in inter-domain cases
+
 03/13/13:
 - Added NCSU site
 
